package globingular.core;

/**
 * <p>Country class that contains information about a single country. The Country class is
 * used as a template for creating objects out of the countries listed in the data file
 * of the project.</p>
 * 
 * <p>An instance of the Country class contains a:
 * <ul>
 * <li>Country code</li>
 * <li>Name</li>
 * <li>Long name</li>
 * <li>Sovereignty</li>
 * <li>Region</li>
 * <li>Population</li>
 * </ul>
 * </p>
 */

public class Country {
    /**
     * Unique two-letter representation of the Country. Following the ISO 3166-1
     * Alpha-2 code. E.g. 'AU'
     */
    private final String countryCode;

    /**
     * Shortname of the Country. E.g. 'Australia'
     */
    private final String shortName;

    /**
     * Full longname of the Country. E.g. 'The Commonwealth of Australia'
     */
    private final String longname;

    /**
     * The sovereignty of the Country. E.g. 'UN' for a UN member state
     */
    private final String sovereignty;

    /**
     * The region the Country is part of. E.g. 'OC' for Oceania
     */
    private final String region;

    /**
     * Population of the Country. E.g. 25646823
     */
    private final long population;

    /**
     * Constructor for Country, an immutable store of data representing one country.
     *
     * @param countryCode Two-letter representation of the Country. Following the ISO 3166-1 Alpha-2 code. I.e. 'AU'
     * @param shortName   Shortname of the Country. I.e. 'Australia'
     * @param longname    Full longname of the Country. I.e. 'The Commonwealth of Australia'
     * @param sovereignty The sovereignty of the Country. I.e. 'UN' for a UN member state
     * @param region      The region the Country is part of. I.e. 'OC' for Oceania
     * @param population  Population of the Country. I.e. 25646823
     */
    public Country(final String countryCode, final String shortName, final String longname, final String sovereignty,
                   final String region, final long population) {
        this.countryCode = countryCode;
        this.shortName = shortName;
        this.longname = longname;
        this.sovereignty = sovereignty;
        this.region = region;
        this.population = population;
    }

    /**
     * Shorthand constructor for Country. Defaults are the following:
     * longname: name
     * sovereignty: 'UN'
     * region: ''
     * population: 0L
     *
     * @param countryCode Two-letter representation of the Country. Following the ISO 3166-1 Alpha-2 code. I.e. 'AU'
     * @param shortName   Shortname of the Country. I.e. 'Australia'
     */
    public Country(final String countryCode, final String shortName) {
        this(countryCode, shortName, shortName, "UN", "", 0L);
    }

    /**
     * Get the Country's ISO 3166-1 Alpha-2 code.
     *
     * @return A two-letter representation, following the ISO 3166-standard
     */
    public String getCountryCode() {
        return countryCode;
    }

    /**
     * Get the Country's short name.
     *
     * @return Short name for the Country
     */
    public String getShortName() {
        return shortName;
    }

    /**
     * Get the Country's long name.
     *
     * @return Long name for the Country
     */
    public String getLongName() {
        return longname;
    }

    /**
     * Get the Country's sovereignty.
     *
     * @return Sovereignty of the Country
     */
    public String getSovereignty() {
        return sovereignty;
    }

    /**
     * Get the Country's region.
     *
     * @return Region of the Country
     */
    public String getRegion() {
        return region;
    }

    /**
     * Get the Country's population.
     *
     * @return Population of the Country
     */
    public long getPopulation() {
        return population;
    }

    /**
     * {@inheritDoc}
     */
    @Override
    public String toString() {
        return "Country{"
                + "countryCode='" + countryCode + '\''
                + ", shortName='" + shortName + '\''
                + ", longName='" + longname + '\''
                + ", sovereignty='" + sovereignty + '\''
                + ", region='" + region + '\''
                + ", population=" + population
                + '}';
    }

    /**
     * {@inheritDoc}
     */
    @Override
    public int hashCode() {
        // This is auto-generated by VS Code
        final int prime = 31;
        int result = 1;
        result = prime * result + ((countryCode == null) ? 0 : countryCode.hashCode());
        result = prime * result + ((longname == null) ? 0 : longname.hashCode());
        result = prime * result + (int) (population ^ (population >>> (prime + 1)));
        result = prime * result + ((region == null) ? 0 : region.hashCode());
        result = prime * result + ((shortName == null) ? 0 : shortName.hashCode());
        result = prime * result + ((sovereignty == null) ? 0 : sovereignty.hashCode());
        return result;
    }

    /**
     * {@inheritDoc}
     */
    @Override
    public boolean equals(final Object obj) {
        // This is auto-generated by VS Code
        if (this == obj) {
            return true;
        }
        if (obj == null) {
            return false;
        }
        if (getClass() != obj.getClass()) {
            return false;
        }
        Country other = (Country) obj;
        if (countryCode == null) {
            if (other.countryCode != null) {
                return false;
            }
        } else if (!countryCode.equals(other.countryCode)) {
            return false;
        }
        if (longname == null) {
            if (other.longname != null) {
                return false;
            }
        } else if (!longname.equals(other.longname)) {
            return false;
        }
        if (population != other.population) {
            return false;
        }
        if (region == null) {
            if (other.region != null) {
                return false;
            }
        } else if (!region.equals(other.region)) {
            return false;
        }
        if (shortName == null) {
            if (other.shortName != null) {
                return false;
            }
        } else if (!shortName.equals(other.shortName)) {
            return false;
        }
        if (sovereignty == null) {
            if (other.sovereignty != null) {
                return false;
            }
        } else if (!sovereignty.equals(other.sovereignty)) {
            return false;
        }
        return true;
    }
}
